--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta property="og:image" content="https://77nnit.github.io/assets/images/icon.png" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://77nnit.github.io/" /> 
-    <meta property="og:site_name" content="77nn.it" />
+    <meta property="og:site_name" content="77nnit.github.io" />
     <meta property="article:author" content ="https://77nnit.github.io/autore.html">
     
     
@@ -41,7 +41,7 @@
     <div class="overflow"><header>
 <div class="header">
     <div class= "siteTitle">
-        77nn.it
+        77nnit.github.io
     </div>
     <div class= "siteDescription">
         <p>TiTiNoNero dice cose<span class="blink">_</span></p>
