--- a/contatti.html
+++ b/contatti.html
@@ -2,10 +2,10 @@
 <html lang="it" prefix="og: https://ogp.me/ns#">
   <head>
     <title>Contatti - come contattare l'autore di 77nn.it</title>  
-    <link rel="stylesheet" href="https://77nnit.github.io/assets/css/styles.css">
-    <link rel="preload" as="font" href="https://77nnit.github.io/assets/css/fonts/5by7.ttf" type="font/ttf" crossorigin="anonymous">
-    <link rel="preload" as="font" href="https://77nnit.github.io/assets/css/fonts/Now-ExtraLight.otf" type="font/otf" crossorigin="anonymous">
-    <link rel="preload" as="font" href="https://77nnit.github.io/assets/css/fonts/Now-Medium.otf" type="font/otf" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://77nn.it/assets/css/styles.css">
+    <link rel="preload" as="font" href="https://77nn.it/assets/css/fonts/5by7.ttf" type="font/ttf" crossorigin="anonymous">
+    <link rel="preload" as="font" href="https://77nn.it/assets/css/fonts/Now-ExtraLight.otf" type="font/otf" crossorigin="anonymous">
+    <link rel="preload" as="font" href="https://77nn.it/assets/css/fonts/Now-Medium.otf" type="font/otf" crossorigin="anonymous">
   
     <!-- META TAGS -->
     <meta charset="utf-8">
@@ -16,11 +16,11 @@
     <!-- MICROFORMATS METADATA -->
     <meta property="og:title" content="Contatti - come contattare l'autore di 77nn.it" />
     <meta property="og:description" content="Pagina dei contatti del sito 77nn.it con modulo di contatto" />
-    <meta property="og:image" content="https://77nnit.github.io/assets/images/icon.png" />
+    <meta property="og:image" content="https://77nn.it/assets/images/icon.png" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://77nnit.github.io/contatti.html" /> 
-    <meta property="og:site_name" content="77nnit.github.io" />
-    <meta property="article:author" content ="https://77nnit.github.io/autore.html">
+    <meta property="og:url" content="https://77nn.it/contatti.html" /> 
+    <meta property="og:site_name" content="77nn.it" />
+    <meta property="article:author" content ="https://77nn.it/autore.html">
     
     
     <meta property="profile:first_name" content="Michele" />
@@ -29,11 +29,11 @@
     <meta name="theme-color" content="#fafafa">
 
     <!-- LINK TAGS -->
-    <link rel="alternate" type="application/rss+xml" href="https://77nnit.github.io/feed.xml" />
+    <link rel="alternate" type="application/rss+xml" href="https://77nn.it/feed.xml" />
     <link rel="icon" href="/assets/images/favicon.ico" sizes="any">
     <link rel="icon" href="/assets/images/icon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="/assets/images/icon.png">
-    <link rel="canonical" href="https://77nnit.github.io/contatti.html" />
+    <link rel="canonical" href="https://77nn.it/contatti.html" />
   </head>
 
   <body>
@@ -41,7 +41,7 @@
     <div class="overflow"><header>
 <div class="header">
     <div class= "siteTitle">
-        77nnit.github.io
+        77nn.it
     </div>
     <div class= "siteDescription">
         <p>TiTiNoNero dice cose<span class="blink">_</span></p>
@@ -137,10 +137,10 @@ In ogni caso se vuoi comunicare con me in modo riservato, ti raccomando i metodi
 </div>
       </div><footer>
 <div class="footerContainer h-card">
-  <span class="span77nn"><a class="u-url" href="https://77nn.it">77nn.it</a></span> è scritto e pubblicato da <span class="p-name" rel="author">Michele Brami</span>. <a rel="license" href="https://77nnit.github.io/legale.html">Tutti i diritti riservati.</a><br>
+  <span class="span77nn"><a class="u-url" href="https://77nn.it">77nn.it</a></span> è scritto e pubblicato da <span class="p-name" rel="author">Michele Brami</span>. <a rel="license" href="https://77nn.it/legale.html">Tutti i diritti riservati.</a><br>
 Se ti piacciono i miei contenuti puoi <a href="https://ko-fi.com/titinonero">offrirmi un caffé!</a><br>
 <br>
-<a rel="me" href="https://mastodon.uno/@titinoNero">Collegati con me su Mastodon!</a> - <a rel="noopener" href = "https://77nnit.github.io/feed.xml" target="_blank" download="77nn-feed.xml" tabindex = "0"><span>RSS feed </span><img class = "rss-icon" src="https://77nnit.github.io/assets/images/rss.svg" alt="Pixelated style icon representing RSS feed logo"/></a>
+<a rel="me" href="https://mastodon.uno/@titinoNero">Collegati con me su Mastodon!</a> - <a rel="noopener" href = "https://77nn.it/feed.xml" target="_blank" download="77nn-feed.xml" tabindex = "0"><span>RSS feed </span><img class = "rss-icon" src="https://77nn.it/assets/images/rss.svg" alt="Pixelated style icon representing RSS feed logo"/></a>
 </div>
 </footer>
 
